--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+scenarios/NGSIM/**/*.txt
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -154,3 +157,5 @@ collected_observations/
 
 # Experiments
 outputs/
+
+
